catalog-scss/_bib-details.scss
@use 'colors';

// new (as of 21.11) cover image carousel
// 1) remove outline
// 2) remove "hint" about where each image came from
#biblio-cover-slider {
  border: 0;
}

.cover-nav,
.cover-slider .hint {
  display: none;
}

// long holdings block can overstep its bounds
// might be a problem with other pieces but I'm being very conservative
// and _only_ fixing the observed problem
// UPDATE 2022-12-20: change to `auto` to avoid scrollbar appearing
// when it's not needed
#holdings {
  overflow: auto;
}

.item-status {
  &.lost {
    color: colors.$bs-text-error;
  }

  &.notforloan {
    color: colors.$black-font;
  }
}

// hide "show analytics" link, useless
.results_summary.analytics,
// we don't use Dewey
.results_summary.ddc,
// hide "show volumes" link
.results_summary.volumes,
// hide "views" tabs like MARC, ISBD
// end users don't need to see these
#views {
  display: none;
}

// override "→" before & after 505 contents notes
.contentblock :first-child:not(.term)::before,
.contents .newline::after {
  content: '';
}

// fix subscription issues icon positioning
#Briefhistory,
#Fullhistory {
  background-position: -8px 3px;
}

// the "more searches" dropdown has class pull-right
// when it really should be pull-left (see on large screen for instance)
#moresearches_menu .dropdown-menu.pull-right {
  left: 0;
  right: auto;
}

// for "more searches" dropdown specifically but also fixes "Lists" etc. too
.dropdown-menu > li > a {
  &:hover,
  &:focus {
    background: colors.$cca-teal none;
  }
}

#catalogue_detail_biblio {
  font-size: 18px;

  .label {
    font-size: 18px;
  }

  .author {
    color: colors.$details-label-black;
    font-size: 18px;
  }
}

// hide Twitter share button, outdated branding, need 2 IDs for specificity
#social_networks #twitter {
  display: none;
}

#bibliodescriptions {
  font-size: 16px;
}

